environments/gloo-gateway/gateway-api/1.18/ai-gateway/field-demo/aigw-config/base/aig-base.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.gloo.solo.io/gateway-parameters-name: gloo-gateway-override
  name: ai-gateway
  namespace: gloo-system
spec:
  gatewayClassName: gloo-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 8080
    protocol: HTTP
  #- allowedRoutes:
  #    namespaces:
  #      from: All
  #  name: https
  #  port: 443
  #  protocol: HTTPS
  #  tls:
  #    mode: Terminate
  #    certificateRefs:
  #      - name: upstream-tls
  #        kind: Secret
